--- a/Java/.vscode/settings.json
+++ b/Java/.vscode/settings.json
@@ -1,4 +1,5 @@
 {
     "java.debug.settings.onBuildFailureProceed": true,
-    "java.dependency.packagePresentation": "hierarchical"
+    "java.dependency.packagePresentation": "hierarchical",
+    "cmake.configureOnOpen": true
 }
